other/disallow-secrets-from-env-vars/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox
          env:
          - name: NODE_NAME
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox02
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox
          envFrom:
          - configMapRef:
              name: foo-bar
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox02
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - image: ghcr.io/kyverno/test-busybox:1.35
              name: busybox
              env:
              - name: NODE_NAME
                valueFrom:
                  fieldRef:
                    fieldPath: spec.nodeName
            - image: ghcr.io/kyverno/test-busybox:1.35
              name: busybox02
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - image: ghcr.io/kyverno/test-busybox:1.35
              name: busybox
              envFrom:
              - configMapRef:
                  name: foo-bar
            - image: ghcr.io/kyverno/test-busybox:1.35
              name: busybox02
          restartPolicy: OnFailure
