other/disallow-secrets-from-env-vars/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      env:
      - name: SECRET_BAD
        valueFrom:
          secretKeyRef:
            name: foo
            key: pass
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      envFrom:
      - secretRef:
          name: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      envFrom:
      - secretRef:
          name: foo
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      env:
      - name: SECRET_BAD
        valueFrom:
          secretKeyRef:
            name: foo
            key: pass
