other/disallow-secrets-from-env-vars/.chainsaw-test/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      env:
      - name: NODE_NAME
        valueFrom:
          fieldRef:
            fieldPath: spec.nodeName
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox-init
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02-init
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      envFrom:
      - configMapRef:
          name: foo-bar
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
