other/disallow-secrets-from-env-vars/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: secrets-not-from-env-vars
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
